<package>
  <name>barrett_hand_tactile</name>
  <version>0.0.1</version>
  <description>	Simulation plugin and launch scripts for Velma in gazebo.</description>
  <maintainer email="dawid.seredynski@gmail.com">Dawid Seredynski</maintainer>

  <license>BSD</license>

  <author>Dawid Seredynski</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>barrett_hand_msgs</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>eigen_conversions</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>eigen_conversions</run_depend>

  <!--
  <export>
    <gazebo_ros plugin_path="${prefix}/lib"/>
  </export>
-->
</package>
